fixed cloud alignment for d wills form checkout cloud

--- a/app/assets/stylesheets/components/_illustration.scss
+++ b/app/assets/stylesheets/components/_illustration.scss
@@ -19,6 +19,15 @@
   z-index: 10;
 }
 
+.illustration-cloud-wills {
+  position: absolute;
+  width: 518px;
+  height: 268px;
+  left: -15%;
+  top: -109%;
+  z-index: 1;
+  width: -190px;
+}
 
 // playlist / music illustrations
 
